test/modules/errors/assign-param-from-module.chpl
module Program {
  module M { }

  param m = M;
}
