test/modules/errors/assign-param-from-module.good
assign-param-from-module.chpl:1: In module 'Program':
assign-param-from-module.chpl:4: error: modules (like 'M' here) cannot be mentioned like variables
